# CSIRO-Image2BiomassPrediction

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml  config_single_stream.yaml  config_two_stream_mlps_only_dinov2large.yaml  config_two_stream_patch_mamba_dinov3.yaml  config_two_stream_tiled.yaml  config_two_stream_tiled_film_mlps_only_dinov2large.yaml  config_two_stream_tiled_mlps_only.yaml  config_two_stream_tiled_mlps_only_dinov2base.yaml  config_two_stream_tiled_mlps_only_dinov2base_plantclef_pretrain.yaml  config_two_stream_tiled_mlps_only_dinov2base_plantclef_pretrain_wunfreeze.yaml  config_two_stream_tiled_mlps_only_dinov2giant.yaml  config_two_stream_tiled_mlps_only_dinov2large.yaml  config_two_stream_tiled_mlps_only_dinov3huge.yaml  config_two_stream_tiled_mlps_only_dinov3large.yaml  config_two_stream_tiled_partial_unfreeze.yaml  config_two_stream_tiled_wfilm.yaml
configs/augmentation/: default.yaml  none.yaml
configs/data/: default.yaml
configs/inference/: default.yaml
configs/logging/: wandb.yaml
configs/model/: dinov2_lasso.yaml  dinov2_lasso_tuned.yaml  dinov2_tiled.yaml  single_stream.yaml  single_stream_tiled.yaml  two_stream.yaml  two_stream_dinov2large.yaml  two_stream_patch_mamba_dinov3.yaml  two_stream_tiled.yaml  two_stream_tiled_dinov2base.yaml  two_stream_tiled_dinov2base_plantclef_pretrain.yaml  two_stream_tiled_dinov2giant.yaml  two_stream_tiled_dinov2large.yaml  two_stream_tiled_dinov3huge.yaml  (+4 more)
kaggle/: download_dataset.sh  update_models.sh  update_models_fromlocal.sh  update_repo.sh
notebooks/: dinov2-lasso-baseline-lb-0-54.ipynb  lb-0-65-dino-v2-tiled.ipynb  test_pipeline.ipynb  train_predict.ipynb
scripts/: README_data_preprocessing.md  data_aggregation.py  data_split.py  inference.py  train.py
(+32 files in other folders)
