[project]
name = "csiro-image2biomassprediction"
version = "0.1.0"
description = ""
authors = [
    { name = "Ivan Bashtovyi", email = "ivanbashtovyi1@gmail.com" },
    { name = "Arthur Khodakovskyi", email = "arturkhodalovskiy@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "torch (>=2.0.0,<3.0.0)",
    "torchvision (>=0.15.0)",
    "numpy (>=1.24.0,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "hydra-core (>=1.3.0,<2.0.0)",
    "omegaconf (>=2.3.0)",
    "pillow (>=9.5.0,<13.0.0)",
    "timm (>=0.9.0)",
    "albumentations (>=1.3.0)",
    "opencv-python (>=4.8.0)",
    "tqdm (>=4.65.0)",
    # PyTorch Lightning
    "pytorch-lightning (>=2.0.0)",
    # Logging
    "wandb (>=0.15.0)",
    "rich (>=13.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"